# ccc-agent-containment

./: .gitignore  README.md  install-ccc-agent-plugin.sh  poc_branchfs_test.sh  pyproject.toml
ccc_agent/: __init__.py  artifacts.py  branchfs.py  cli.py  control.py  ctl.py  paths.py  policy.py  runner.py  session.py  setup.py  turn.py
ccc_agent/assets/completions/bash/: ccc-agent
ccc_agent/assets/completions/fish/: ccc-agent.fish
ccc_agent/assets/completions/zsh/: _ccc-agent
ccc_agent/assets/hooks/: claude-stop-hook.sh  codex-notify.sh  codex-stop-hook.sh  hermes-finish-turn.sh
ccc_agent/assets/plugins/claude-ccc-containment/.claude-plugin/: plugin.json
ccc_agent/assets/plugins/claude-ccc-containment/hooks/: hooks.json
ccc_agent/assets/plugins/codex-ccc-containment/.codex-plugin/: plugin.json
ccc_agent/assets/plugins/codex-ccc-containment/hooks/: ccc-stop-hook.sh  hooks.json
ccc_agent/assets/plugins/hermes-ccc-containment/: __init__.py  plugin.yaml
ccc_agent/assets/scripts/: softsandbox.sh
ccc_agent/assets/shims/: ccc-agent-shim.sh
config/: claude-managed-settings.example.json  codex-config.example.toml  config.example.json
docs/: agent-integration.md  architecture.md  policy.md
hooks/: claude-stop-hook.sh  codex-notify.sh  codex-stop-hook.sh  hermes-finish-turn.sh
scripts/: ccc-agent-chroot.sh  diag-bwrap-proc.sh  diag-checkpoint.sh  diag-proc-mount.py  diag-rootless-sandbox.py  diag-userns-mount.py  test-e2e-bwrap.sh  test-e2e-none.sh  test-e2e-perturn.sh  test-e2e-realagent.sh  test-intercept-realbin.sh  test-ns-bind.py  test-plugin-hooks.sh
shims/: ccc-agent-shim.sh
tests/: test_branchfs.py  test_cli.py  test_control.py  test_ctl.py  test_ctl_socket.py  test_integration_real_branchfs.py  test_paths.py  test_poc_components.py  test_policy.py  test_review.py  test_runner.py  test_scripts.py  test_session.py  test_setup.py  test_turn.py
