[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ccc-agent"
version = "0.1.0"
description = "BranchFS-based filesystem containment for AI agents in CCC containers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# Deliberately dependency-free: the supervisor is stdlib-only so it runs on any
# python3 (and can be installed system-wide without pulling a dependency tree).
dependencies = []

[project.scripts]
ccc-agent = "ccc_agent.cli:main"

[tool.setuptools]
packages = ["ccc_agent"]
include-package-data = true

[tool.setuptools.package-data]
"ccc_agent" = [
    "assets/hooks/*.sh",
    "assets/shims/*.sh",
    "assets/scripts/*.sh",
    "assets/plugins/**/*.json",
    "assets/plugins/claude-ccc-containment/.claude-plugin/*.json",
    "assets/plugins/codex-ccc-containment/.codex-plugin/*.json",
    "assets/plugins/**/*.sh",
    "assets/plugins/**/*.yaml",
    "assets/plugins/**/*.py",
]
