[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ccc-agent"
dynamic = ["version"]
description = "BranchFS-based filesystem containment for AI agents in CCC containers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# Deliberately dependency-free: the supervisor is stdlib-only so it runs on any
# python3 (and can be installed system-wide without pulling a dependency tree).
dependencies = []

[project.scripts]
ccc-agent = "ccc_agent.cli:main"

[tool.setuptools]
packages = ["ccc_agent"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "ccc_agent.__version__" }

[tool.setuptools.package-data]
"ccc_agent" = [
    "assets/hooks/*.sh",
    "assets/shims/*.sh",
    "assets/scripts/*.sh",
    "assets/completions/bash/ccc-agent",
    "assets/completions/zsh/_ccc-agent",
    "assets/completions/fish/ccc-agent.fish",
    "assets/plugins/**/*.json",
    "assets/plugins/claude-ccc-containment/.claude-plugin/*.json",
    "assets/plugins/codex-ccc-containment/.codex-plugin/*.json",
    "assets/plugins/**/*.sh",
    "assets/plugins/**/*.yaml",
    "assets/plugins/**/*.py",
]

[tool.setuptools.data-files]
"share/bash-completion/completions" = ["ccc_agent/assets/completions/bash/ccc-agent"]
"share/zsh/site-functions" = ["ccc_agent/assets/completions/zsh/_ccc-agent"]
"share/fish/vendor_completions.d" = ["ccc_agent/assets/completions/fish/ccc-agent.fish"]
